feat: update i18n configuration and improve localization strings for portfolio

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,5 @@
 {
-  "welcome": "Welcome to Delfino's Portfolio",
-  "description": "A showcase of projects and professional experience"
+  "title": "Delfino Portfolio",
+  "description": "Showcasing the portfolio of Delfin Fernandez",
+  "no_entries": "No portfolio entries found."
 }
