--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,4 +1,5 @@
 {
-  "welcome": "Bienvenue sur le portfolio de Delfino",
-  "description": "Une vitrine des projets et de l'expérience professionnelle"
+  "title": "Portafolio de Delfino",
+  "description": "Mostrando el portafolio de Delfin Fernandez",
+  "no_entries": "No se encontraron entradas de portafolio."
 }
